# simd

./: .gitignore  CMakeLists.txt
cmake/: cuda.cmake
include/: detect_compiler_arch.h
src/: main.cpp
test/: CMakeLists.txt  test_main.cpp
